alignment fixes

--- a/cigaradvisor/blocks/article-teaser/article-teaser.css
+++ b/cigaradvisor/blocks/article-teaser/article-teaser.css
@@ -2,6 +2,10 @@ body{
   color: #333;
 }
 
+.article-teaser{
+  /* width: 530px; */
+}
+
 html {
   font-size:100%;
   line-height:1.5
@@ -55,7 +59,7 @@ a:active, a:hover {
   content: '';
   height: 100%;
   width: 100%;
-  position: absolute;
+  position: relative;
   top: 0;
   left: 0;
   z-index: 3;
@@ -138,7 +142,7 @@ a:active, a:hover {
   -ms-flex: 1 0 13rem;
   flex: 1 0 13rem;
   width: 100%;
-  max-height: 321px;
+  /* max-height: 321px; */
 }
 
 .article.article--thumbnail .article__image > img {
@@ -233,7 +237,7 @@ a:active, a:hover {
 
 .article--thumbnail .article__meta > * {
   display: inline-block;
-  font-family: montserrat,sans-serif;
+  font-family: montserrat, sans-serif;
   font-weight: 600;
   font-size: 16px;
 }
